# simpleargs

./: Cargo.toml  LICENSE.txt  README.md  simpleargs.code-workspace
src/: arg.rs  error.rs  lib.rs  parse.rs
