[package]
name = "simpleargs"
version = "0.1.0"
authors = ["Dietrich Epp <depp@zdome.net>"]
readme = "README.md"
repository = "https://github.com/depp/simpleargs"
homepage = "https://github.com/depp/simpleargs"
license = "MIT"
edition = "2018"
description = """
clean alternative to getopt
"""
categories = ["command-line-interface"]
keywords = [
	"cli",
	"arg",
]

[lib]

[dependencies]
